# IOD

./: CMakeLists.txt  README.md
include/: Constants.h  Document.h  ExitCodes.h  ICommand.h  IRankingStrategy.h  InvertedIndex.h  Token.h  Tokeniser.h
src/: Document.cpp  InvertedIndex.cpp  Tokeniser.cpp  main.cpp
src/commands/: IndexCommand.cpp  IndexCommand.h  InteractiveSearchCommand.cpp  InteractiveSearchCommand.h  SearchCommand.cpp  SearchCommand.h
src/ranking/: NoRanking.cpp  NoRanking.h  TfIdfRanking.cpp  TfIdfRanking.h
